<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2018 Koninklijke Philips N.V.
  ~ All rights reserved.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cml_card_padding">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/cml_card_padding">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cml_wifi_port"/>

        <Switch
            android:id="@+id/cml_switchSubscription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            android:paddingTop="8dp"
            android:text="@string/cml_switchSubscription"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_ssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_ssid"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_password"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_protection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_protection"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_ipaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_ipaddress"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_netmask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_netmask"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_gateway"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_gateway"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_macaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_macaddress"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_cppid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_cppid"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_travelssid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_travelssid"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/cml_travelpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/cml_travelpassword"
                tools:text="Air purifier" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/cml_btn_get"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cml_get"/>

            <Button
                style="@style/Widget.AppCompat.Button.Borderless"
                android:id="@+id/cml_btn_set"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cml_set"/>
        </LinearLayout>


    </LinearLayout>
</android.support.v7.widget.CardView>