<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-2017 Koninklijke Philips N.V.
  ~ All rights reserved.
  -->

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/cml_card_padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        android:padding="@dimen/cml_card_padding">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cml_firmware_upgrade_port" />

        <TextView
            android:id="@+id/cml_tvFirmwareSearchLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Firmware images directory" />

        <Button
            android:id="@+id/cml_btnSelectFirmware"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cml_activity_vertical_margin"
            android:text="@string/cml_choose_firmware_image" />

        <TextView
            android:id="@+id/cml_tvFirmwareImageName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Firmware image name" />

        <ListView
            android:id="@+id/cml_lvFirmwareImages"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/cml_activity_vertical_margin"
            android:layout_weight="1"
            android:choiceMode="singleChoice"
            android:fadeScrollbars="false"
            android:listSelector="@color/cml_colorAccent" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/cml_timeoutWrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toStartOf="@+id/cml_timeout_unit">

                <EditText
                    android:id="@+id/cml_timeoutEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/cml_timeout"
                    android:inputType="numberDecimal" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/cml_timeout_unit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/cml_timeoutWrapper"
                android:layout_alignParentEnd="true"
                android:paddingBottom="8dp"
                android:paddingStart="10dp"
                android:text="@string/cml_ms" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/cml_progressUploadFirmware"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="false" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/cml_lblFirmwareState"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cml_txtFirmwareState"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="3dip"
                    tools:text="State value" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/cml_lblFirmwareVersion"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cml_txtFirmwareVersion"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="3dip"
                    tools:text="Version value" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/cml_lblFirmwareCanUpgrade"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cml_tvCanUpgrade"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:padding="3dip"
                    android:text="@string/cml_n_a"
                    tools:text="Can upgrade value" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="3dip"
                    android:text="@string/cml_lblFirmwareStatusMsg"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/cml_txtFirmwareStatusMsg"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:lines="2"
                    android:padding="3dip"
                    tools:text="Status value" />
            </TableRow>
        </TableLayout>

        <Button
            android:id="@+id/cml_btnUploadFirmware"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/cml_activity_vertical_margin"
            android:text="@string/cml_upload_firmware" />

        <Button
            android:id="@+id/cml_btnDeployFirmware"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cml_deploy_firmware" />

        <Button
            android:id="@+id/cml_btnCancelFirmware"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cml_cancel_firmware" />
    </LinearLayout>
</android.support.v7.widget.CardView>
